🚨 fix [] SheetSectionGroup의 gap을 디자인에 맞게 수정

--- a/src/components/sheet/sheet-section-group.module.css
+++ b/src/components/sheet/sheet-section-group.module.css
@@ -1,6 +1,6 @@
 .sheetSectionGroup {
   display: flex;
-  gap: 8px;
+  gap: 20px;
 }
 
 .sheetSectionGroupItem {
